# susumu_face_engagement_detector

./: .gitignore  API.md  CLAUDE.md  INSTALLATION.md  Makefile  README.md  TEST_RESULTS.md  USAGE.md  package.xml  pytest.ini  setup.cfg  setup.py
.claude/: common-patterns.md  context.md  debug-log.md  project-improvements.md  project-knowledge.md
config/: engagement_manager_params.yaml  face_detection_params.yaml  face_detection_performance.yaml  face_detection_rviz.rviz  face_recognition_params.yaml  gaze_analysis_params.yaml
docs/: PERFORMANCE_OPTIMIZATION.md  REVAMP_PLAN.md
eval/: README.md  chokepoint_demo.py  video_demo.py  visualize.py
launch/: engagement_manager_only.launch.py  engagement_pipeline.launch.py  face_detection_only.launch.py  face_detection_performance.launch.py  face_detection_rviz.launch.py  face_detection_with_rviz.launch.py  face_recognition_only.launch.py  gaze_analysis_only.launch.py  monitoring.launch.py  multi_node_launch.py  simple_launch.py  simple_rviz_test.launch.py
legacy/: TESTING.md
outputs/: .gitignore  README.md
scripts/: comprehensive_test.py  generate_test_images.py  reliable_test_pipeline.py  simple_integration_test.py  test_pipeline.py
susumu_face_engagement_detector/: engagement.py  engagement_manager_node.py  engagement_node.py  expression_node.py  face_detection_node.py  face_engagement_node.py  face_recognition_node.py  gaze_analysis_node.py  gaze_node.py  head_pose_node.py  monitoring_node.py  multi_node_executor.py  test_camera_node.py
test/: conftest.py  test_face_detection_minimal.py  test_simple.py  (+3 more)
(+42 files in other folders)
